@@ -99,6 +99,8 @@ x2goclient (4.0.5.1-0x2go1) UNRELEASED; urgency=low
       just the library file name. Helps debugging.
     - macbuild.sh: also install libraries into staging area with intermediate
       library path. Putting everything into a single place is a stupid idea.
+    - deduplicate.sh: add new, more or less Proof of Concept, and Work in
+      Progress file deduplication script.
 
   [ Oleksandr Shneyder ]
   * New upstream release (4.0.5.1):
